# ememediaforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dev.yml  publish.yml  release.yml
demo/: generate_audio.py  project.yaml
demo/samples/: pidgin_sample.txt  yoruba_sample.txt
docs/: ALIGNMENT.md  DEPLOYMENT.md  PYPI_CICD_SETUP.md  RELEASES.md  THEMES.md
ememediaforge/: __init__.py
ememediaforge/alignment/: __init__.py  aligner.py  timestamps.py
ememediaforge/assets/: __init__.py  loader.py
ememediaforge/audio/: __init__.py  analyzer.py  duration.py  waveform.py
ememediaforge/cli/: __init__.py  app.py  build.py  init.py  validate.py
ememediaforge/config/: __init__.py  loader.py  schema.py
ememediaforge/core/: __init__.py  exceptions.py  pipeline.py  project.py
ememediaforge/exporters/: __init__.py  metadata.py  mp4.py  thumbnail.py
ememediaforge/render/: __init__.py  compositor.py  encoder.py  ffmpeg.py
ememediaforge/scenes/: __init__.py  base.py  intro.py  outro.py  sample.py  transition.py
ememediaforge/templates/: __init__.py  stt.py  tts.py
ememediaforge/themes/: __init__.py  base.py  dark.py  light.py  minimal.py  modern.py
ememediaforge/timeline/: __init__.py  scheduler.py  timeline.py
example/: project.yaml
tests/: test_pipeline.py
